[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.93.0",
    "chromadb>=0.6.0",
    "llama-cloud>=2.5.0",
    "python-dotenv>=1.2.2",
    "liteparse>=1.2.1",
    "streamlit>=1.57.0",
    "openai>=2.37.0",
    "sentence-transformers>=5.5.0",
    "cohere>=6.1.0",
    "groq>=1.2.0",
    "llama-parse>=0.5.20",
]
